tests_bucklescript/__snapshots__/Error_Template_missingField_re.45edb96b.0.snapshot
Error Template › missingField2.re › output
File \"tests_bucklescript/operations/errors/missingField2.re\", line 13, characters 8-28:
13 |     l1: thisTypeDoesNotExist {
             ^^^^^^^^^^^^^^^^^^^^
Error: Unknown field 'thisTypeDoesNotExist' on type Query

  We've found a bug for you!
  /Users/Jaap/Documents/development/graphql-ppx/tests_bucklescript/operations/errors/missingField2.re
  
  Error while running external preprocessor
